Melhorando as funções de cadastro
