# backend/swagger-output.json
@@ -174,6 +174,12 @@
                   },
                   "maqDescricao": {
                     "example": "any"
+                  },
+                  "maqPrecoVenda": {
+                    "example": "any"
+                  },
+                  "maqPrecoHora": {
+                    "example": "any"
                   }
                 }
               }
@@ -706,11 +712,8 @@
         "summary": "Listar todas os clientes cadastradas",
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "default": {
+            "description": ""
           }
         }
       },
@@ -721,40 +724,8 @@
         "summary": "Alterar um cliente",
         "description": "",
         "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "cliId": {
-                    "example": "any"
-                  },
-                  "cliNome": {
-                    "example": "any"
-                  },
-                  "cliCPF_CNPJ": {
-                    "example": "any"
-                  },
-                  "usuTelefone": {
-                    "example": "any"
-                  },
-                  "usuEmail": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
+          "default": {
+            "description": ""
           }
         }
       }
@@ -777,14 +748,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "default": {
+            "description": ""
           }
         }
       },
@@ -805,11 +770,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "default": {
+            "description": ""
           }
         }
       }
@@ -822,37 +784,8 @@
         "summary": "Cadsatrar um cliente",
         "description": "",
         "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "cliNome": {
-                    "example": "any"
-                  },
-                  "cliCPF_CNPJ": {
-                    "example": "any"
-                  },
-                  "usuTelefone": {
-                    "example": "any"
-                  },
-                  "usuEmail": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
+          "default": {
+            "description": ""
           }
         }
       }
@@ -881,19 +814,25 @@
           },
           "maqDescricao": {
             "type": "string",
-            "example": "1"
+            "example": "Trator de grande porte"
           },
           "maqInativo": {
             "type": "string",
-            "example": "0"
+            "example": "N"
           },
           "maqHorasUso": {
             "type": "string",
-            "example": "Trator de grande porte"
+            "example": "0"
+          },
+          "maqPrecoVenda": {
+            "type": "undefined"
+          },
+          "maqPrecoHora": {
+            "type": "undefined"
           },
           "equipamentoStatus": {
             "type": "string",
-            "example": "N"
+            "example": "1"
           }
         }
       }
